--- a/live.html
+++ b/live.html
@@ -187,7 +187,7 @@
     // Firebase
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
     import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-    import { getFirestore, doc, getDoc, setDoc, deleteDoc, onSnapshot, collection, query, where, onSnapshot as onCollSnapshot } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+    import { getFirestore, doc, getDoc, setDoc, deleteDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyBbR8R_3_Xf6QQPaZf9WDRLovSycAI1bKQ",
@@ -241,39 +241,46 @@
         text: message,
         icon: isError ? 'error' : 'success',
         timer: 3000,
-        showConfirmButton: false,
-        customClass: {
-          popup: 'swal2-border-radius'
-        }
+        showConfirmButton: false
       });
     }
 
-    // 🎥 Start Stream (Admin)
+    // 🎥 Start Stream (Admin) — WITH STALE LOCK CLEANUP
     async function startStream() {
+      // 🔐 Check camera permission FIRST
       try {
         const stream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
         stream.getTracks().forEach(t => t.stop());
       } catch (e) {
-        showAlert("Please allow camera & microphone access.", true);
+        showAlert("Camera/mic access required to go live.", true);
         return;
       }
 
       const streamRef = doc(db, "streamControl", "activeStream");
       const snap = await getDoc(streamRef);
       if (snap.exists()) {
-        showAlert("A stream is already live!", true);
-        return;
+        // ⏱️ Auto-clean stale lock (>30 seconds old)
+        const ageMs = Date.now() - new Date(snap.data().startedAt).getTime();
+        if (ageMs > 30000) {
+          await deleteDoc(streamRef);
+          showAlert("Recovered from stale stream.", false);
+        } else {
+          showAlert("A stream is already live!", true);
+          return;
+        }
       }
 
       Swal.fire({ title: "Starting stream...", didOpen: () => Swal.showLoading() });
 
       try {
+        // 🔒 Create stream lock WITH timestamp
         await setDoc(streamRef, {
           hostUid: currentUser.uid,
           hostEmail: currentUser.email,
           startedAt: new Date().toISOString()
         });
 
+        // 📹 Initialize Agora
         rtc.client = AgoraRTC.createClient({ mode: "live", codec: "vp8" });
         await rtc.client.join(AGORA_APP_ID, AGORA_CHANNEL, null, null);
         await rtc.client.setClientRole("host");
@@ -282,19 +289,34 @@
         const audioTrack = await AgoraRTC.createMicrophoneAudioTrack();
         await rtc.client.publish([videoTrack, audioTrack]);
 
+        // ▶️ Show video
         videoTrack.play(localPlayer);
         localPlayer.style.display = "block";
 
+        // UI
         startStreamBtn.style.display = "none";
         stopStreamBtn.style.display = "inline-block";
         viewersList.style.display = "block";
         Swal.close();
         showAlert("You're live! 🎥");
 
+        // 👁️ Track viewers (admin only)
+        if (currentUser?.email === ADMIN_EMAIL) {
+          rtc.client.on("user-joined", (user) => {
+            rtc.remoteUsers.set(user.uid, user.uid);
+            updateViewersList();
+          });
+          rtc.client.on("user-left", (user) => {
+            rtc.remoteUsers.delete(user.uid);
+            updateViewersList();
+          });
+        }
+
       } catch (err) {
-        console.error("Start Stream Error:", err);
-        showAlert(err.message || "Failed to start stream", true);
+        console.error("Stream Error:", err);
+        // 🔓 ALWAYS clean up on error
         await deleteDoc(doc(db, "streamControl", "activeStream"));
+        showAlert(err.message || "Failed to start stream", true);
       }
     }
 
@@ -356,22 +378,20 @@
       noStreamMsg.style.display = "block";
     }
 
-    // 👁️ Update viewer list (Admin only)
+    // 👁️ Update viewer list
     function updateViewersList() {
       if (currentUser?.email !== ADMIN_EMAIL) return;
       
-      const items = Array.from(rtc.remoteUsers.values()).map(uid => {
-        const userDiv = document.createElement('div');
-        userDiv.className = 'viewer-item';
-        userDiv.textContent = `Viewer (${uid.substring(0, 8)}...)`;
-        return userDiv;
-      });
-
       viewersItems.innerHTML = '';
-      if (items.length === 0) {
+      if (rtc.remoteUsers.size === 0) {
         viewersItems.innerHTML = '<div class="viewer-item">No viewers yet</div>';
       } else {
-        items.forEach(item => viewersItems.appendChild(item));
+        rtc.remoteUsers.forEach((uid, key) => {
+          const div = document.createElement('div');
+          div.className = 'viewer-item';
+          div.textContent = `Viewer (${uid.substring(0, 8)}...)`;
+          viewersItems.appendChild(div);
+        });
       }
     }
 
@@ -379,9 +399,6 @@
     onSnapshot(doc(db, "streamControl", "activeStream"), (snap) => {
       if (snap.exists()) {
         noStreamMsg.style.display = "none";
-        if (currentUser?.email === ADMIN_EMAIL) {
-          goLiveTab.style.display = "block";
-        }
       } else {
         noStreamMsg.style.display = "block";
         remotePlayer.style.display = "none";
@@ -404,46 +421,23 @@
       }
     });
 
-    // Agora client events for viewer tracking (admin only)
-    if (typeof AgoraRTC !== 'undefined') {
-      // We'll set up client events when stream starts
-    }
-
     // 🖱️ Events
     startStreamBtn.addEventListener("click", startStream);
     stopStreamBtn.addEventListener("click", stopStream);
     joinBtn.addEventListener("click", joinStream);
     leaveWatchBtn.addEventListener("click", leaveAsViewer);
 
-    // Initialize Agora client with viewer tracking (for admin)
-    function initAgoraWithViewers() {
-      if (!rtc.client) return;
-
-      rtc.client.on("user-joined", (user) => {
-        rtc.remoteUsers.set(user.uid, user.uid);
-        updateViewersList();
-      });
-
-      rtc.client.on("user-left", (user) => {
-        rtc.remoteUsers.delete(user.uid);
-        updateViewersList();
-      });
-    }
-
-    // Override joinStream and startStream to include viewer tracking
-    const originalStartStream = startStream;
-    startStream = async () => {
-      await originalStartStream();
-      if (rtc.client) initAgoraWithViewers();
-    };
-
-    const originalJoinStream = joinStream;
-    joinStream = async () => {
-      await originalJoinStream();
-      if (rtc.client && currentUser?.email === ADMIN_EMAIL) {
-        initAgoraWithViewers();
+    // 🔚 Auto-cleanup on page exit (best effort)
+    window.addEventListener('beforeunload', async () => {
+      if (currentUser?.email === ADMIN_EMAIL && rtc.client) {
+        try {
+          await rtc.client.leave();
+          await deleteDoc(doc(db, "streamControl", "activeStream"));
+        } catch (e) {
+          // Silent fail on unload
+        }
       }
-    };
+    });
   </script>
 </body>
 </html>
